# whatsmi-koi-api

./: .env.local  .gitignore  Cargo.toml  README.md  predict.py
src/: lib.rs  main.rs
src/database/: connection.rs  mod.rs  models.rs
src/handlers/: admin.rs  mod.rs  process.rs
src/util/: mod.rs
