[package]
name = "whatsmi-koi-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.6.20", features=["multipart"]}
axum_static = "1.2.3"
dotenv = "0.15.0"
futures-util = "0.3.29"
http = "0.2.9"
serde = {version="1.0.190", features=["derive"]}
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = {version="0.4.4", features=["cors"]}
uuid = {version = "1.5.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
tensorflow = "0.21.0"
diesel = { version = "2.1.0", features = ["postgres"] }
